# coin-fetcher

./: Cargo.toml  diesel.toml
migrations/2025-09-13-155801-0000_create_coins/: up.sql
migrations/2025-09-13-155809-0000_create_coin_data/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  schemas.rs
src/models/: coin.rs  coin_data.rs
src/schemas/: coin_data.rs  coins.rs
