[package]
name = "coin-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"]  }
dotenv = "0.15.0"
governor = "0.10.1"
serde_json = "1.0.143"
chrono = "0.4.42"
diesel = { version = "2.3.1", features = ["sqlite", "chrono", "r2d2"] }
